[package]
name = "pgtk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = {version="0.19.0", features = ["with-serde_json-1"]}
postgres_query = "0.3.3"
clap = { version = "4.5.20", features = ["cargo"] }
substring = "1.4.5"
regex = "1.11.1"
log = "0.4.22"
lazy_static = "1.5.0"
serde = { version = "1.0.214",  features = ["derive"] }
bincode = "1.3.3"
